// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapsPlugin applies a transform 1`] = `
"
                        const foo = 'bar';
            console.log(foo);
"
`;

exports[`snapsPlugin forwards the options 1`] = `
"// foo bar
            /* baz qux */
            const foo = 'bar';
            console.log(foo);
"
`;

exports[`snapsPlugin processes files using Rollup 1`] = `
"const foo = 'bar';
            console.log(foo);
"
`;

exports[`snapsPlugin runs on the entire bundle 1`] = `
"
            const bar = 'baz';


            const foo = bar;
            console.log(foo);
"
`;
